<resources>
    <string name="app_name">Konversi Mata Uang</string>
    <string name="tip_amount">Nilai Rupiah: %s</string>
    <string name="saudi_riyal">Saudi Riyal</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="us_dollar">US Dollar</string>
    <string name="euro">Euro</string>
    <string name="konversi">Konversi</string>
    <string name="nilai_mata_uang">Nilai Mata Uang</string>
    <string name="pilih_mata_uang">Pilih Mata Uang</string>
    <string name="todo">TODO</string>
</resources>