<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="309dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tip_options">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_mata_uang"
            android:inputType="numberDecimal"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        tools:text="Nilai Rupiah: Rp 0" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:checkedButton="@id/Euro"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question">

        <RadioButton
            android:id="@+id/Euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/US"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us_dollar" />

        <RadioButton
            android:id="@+id/Yen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/japanese_yen" />

        <RadioButton
            android:id="@+id/Riyal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saudi_riyal" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="369dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:text="@string/konversi"
        android:textColor="#6D4C41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/pilih_mata_uang"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/dollar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="224dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>